user-service/kubefiles/deployment-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-app-green
  namespace: finance-app
  labels:
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-app
      namespace: finance-app
  template:
    metadata:
      labels:
        app: user-app
        namespace: finance-app
        version: green
    spec:
      containers:
        - name: user-app
          image: welitoncardozo/user-service:green
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
