user-service/kubefiles/service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: finance-app
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: user-app
    namespace: finance-app
