user-service/kubefiles/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-service-rule
  namespace: finance-app
spec:
  host: finance-service
  subsets:
  - name: blue
    labels:
      version: blue
  - name: green
    labels:
      version: green
