user-service/kubefiles/green-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-service-stage-green
  namespace: finance-app
spec:
  gateways:
    - finance-app-gateway
  hosts:
    - "*"
  http:
    - match:
      - uri:
          prefix: /user-service
      route:
      - destination:
          host: user-service
          port:
            number: 8080
          subset: blue
        weight: 30
      - destination:
          host: user-service
          port:
            number: 8080
          subset: green
        weight: 70
